# visionair-ble

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.agents/skills/vmi-reverse-engineering/: SKILL.md
.claude/skills/: vmi-reverse-engineering.md
.claude/skills/vmi-reverse-engineering/: SKILL.md
docs/: implementation-speculation.md  implementation-status.md  protocol.md
docs/issue-comments/: 2026-02-09-issue-19-update.md
docs/logbook/: 2026-02-06.md  2026-02-07.md  2026-02-09.md  2026-02-11.md  2026-02-12.md
docs/reverse-engineering/: phone-setup.md  physical-verification.md  playbook.md
examples/: basic_usage.py  dump_raw_status.py
scripts/: analyze_settings_packets.py  sound_monitor.py
scripts/capture/: app_control.sh  btsnooz.py  extract_packets.py  preflight_capture.py  vmi_ui.py  vmictl.py
scripts/capture/vmictl_lib/: __init__.py  cli.py  commands.py  config.py  controller.py  ui.py  ui_actions.py  ui_core.py  ui_navigation.py  ui_selectors.toml  ui_special_modes.py
scripts/experiments/: find_remote_temp.py  test_0x18_fan_speed.py  test_0x18_listen.py  test_0x18_vibration.py  test_app_vibration.py  test_init_fan_speed.py
src/visionair_ble/: __init__.py  client.py  connect.py  protocol.py
tests/: conftest.py  test_client.py  test_e2e.py  test_protocol.py
