[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "visionair-ble"
version = "0.1.0"
description = "Unofficial Python library for controlling VisionAir ventilation devices over Bluetooth Low Energy"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Bart Cortooms" },
]
keywords = ["visionair", "purevent", "vmi", "ventilation", "ble", "bluetooth", "home-assistant", "ventilairsec"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Home Automation",
    "Typing :: Typed",
]
dependencies = [
    "bleak>=0.21.0",
]

[project.optional-dependencies]
proxy = [
    "aioesphomeapi>=18.0.0",
    "bleak-esphome>=1.0.0",
    "habluetooth>=2.0.0",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/bartcortooms/visionair-ble"
Documentation = "https://github.com/bartcortooms/visionair-ble#readme"
Repository = "https://github.com/bartcortooms/visionair-ble"
Issues = "https://github.com/bartcortooms/visionair-ble/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/visionair_ble"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "e2e: end-to-end tests requiring a real VisionAir device (skipped by default)",
]
addopts = "-m 'not e2e'"
